# QtSamples

./: BotDialog.qml  BotManager.h  CMakeLists.txt  ElementModel.cpp  ElementModel.h  README.md  SharedGadget.h  main.qml
AppWithBug/: CMakeLists.txt  main.cpp  main.qml  qtquickcontrols2.conf  readme.txt
AppWithBug/platform/android/: AndroidManifest.xml
GcBug/: BotManager.cpp  BotModel.h  BotPage.qml  main.cpp
GreenRect/: CMakeLists.txt  main.cpp  main.qml
TableDemo/: CMakeLists.txt  TableModel.h  main.qml
